<resources>
    <string name="app_name">Motion Capture Client</string>
    <string name="action_settings">WiFi Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mockup">MockUp</string>
    <string name="humanoid_robot">Humanoid robot</string>
    <string name="settings_title">Settings</string>
    <string name="mockup_connect">MockUp Connect</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="feedback">Feedback</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="wifi_reconnect">Connecting to the new WiFi network…</string>
    <string name="wifi_settings">WiFi Settings</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="mqtt_settings">MQTT Settings</string>
    <string name="failure">Failure</string>
    <string name="wifi_changed">WiFi Settings changed</string>
    <string name="successful">Successful!</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="get_wifi_failure">Get WiFi status failure</string>
    <string name="required_field">Required field!</string>

</resources>
