<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="5dp"
    android:padding="10dp"
    app:cardElevation="5dp"
    card_view:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_header">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mockup_connect"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="100"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/host"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/port"
                android:textSize="14sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="100"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/mockup_host"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/host"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/mockup_port"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textSize="14sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:background="@drawable/button_rounded_primary"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <RelativeLayout
            android:id="@+id/mockup_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/disconnected_card_feedback"
            >

            <TextView
                android:id="@+id/mockup_feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/disconnected"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>